<resources>
    <string name="app_name">CookBook</string>
    <string name="app_title">CookBook</string>
    <string name="search">Search recipes by name</string>
    <string name="sorry_recipes_not_available">Sorry Recipes Not Available</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="difficulty">Difficulty:</string>
    <string name="ingredients">Ingredients</string>
    <string name="utensils">Utensils</string>
    <string name="nutrition_per_servings">Nutrition Per Servings</string>
    <string name="add_new_ingredient">Add New Ingredient</string>
    <string name="tags">Tags</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_confirm_password">Enter your confirm new password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="security_question">Security Question</string>
    <string name="answer_security_question">Answer security question</string>
    <string name="security_answer">Security Answer</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="check_email">Check Email</string>
    <string name="email_attached_with_account">Email attached with account</string>
    <string name="welcome_to_cookbook">Welcome To CookBook</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="security_question_answer">Security Question Answer</string>
    <string name="you_haven_t_uploaded_any_recipes_yet">You haven\'t uploaded any recipes yet!</string>
</resources>