<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_screen"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/back_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="@string/old_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/enter_your_old_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="@string/new_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="@string/confirm_new_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/enter_your_confirm_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_30sdp"
        android:text="@string/change_password" />

</LinearLayout>