<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_screen"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/welcome_to_cookbook"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/user_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/email"
        android:inputType="textMultiLine"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_regular"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/user_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myriad_pro_regular"
        android:padding="@dimen/_10sdp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Sign up" />

</LinearLayout>