<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/drawer_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="fitXY"
                android:src="@drawable/three_line_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/app_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/drawer_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/rel_filter"
            android:background="@drawable/light_blue_back"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/lightBlack"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel_filter"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/light_blue_back">

            <ImageView
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_filter_list" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_5sdp"
        tools:listitem="@layout/recipe_list_item" />

    <TextView
        android:id="@+id/no_recipes_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/sorry_recipes_not_available"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>